updated inference functions

--- a/notebooks/Data_formatting.ipynb
+++ b/notebooks/Data_formatting.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "18f1a0a3-7e45-4b8b-b56d-c0402a2f2c03",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1d3f5462-d903-4eaf-aba4-1a6b732153cd",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "152a8450-cd06-4d37-8954-2ec18ade13a1",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "663ec845-e600-4c58-adb1-211ac1925746",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "['v1', 'v2', 'dataset.csv', 'train.csv', 'test.csv']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,6 +963,7 @@
    "cell_type": "markdown",
    "id": "3ee27d59-7eae-4360-9f47-320b1fc53b2f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1552,8 +1553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(osp.join(FINAL_DATASET_DIR, \"train.csv\"))\n",
-    "test = pd.read_csv(osp.join(FINAL_DATASET_DIR, \"test.csv\"))"
+    "train = pd.read_csv(osp.join(FINAL_DATASET_DIR, \"train.csv\"))"
    ]
   },
   {
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "161c8c57-8311-4807-adad-c28ba607fd22",
    "metadata": {},
    "outputs": [],
@@ -2348,9 +2348,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37dea182-26a8-402f-bf1c-2fb817dacccb",
+   "metadata": {},
+   "source": [
+    "## Test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6cfe0b18-6cb1-4ddc-a383-14042e193b75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folders_with_incorrect_counts = [int(f) for f in folders_with_incorrect_counts]\n",
+    "folders_with_incorrect_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d87b97d-4632-468a-8f19-b9d3f3adc377",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(249, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_ID</th>\n",
+       "      <th>in_state</th>\n",
+       "      <th>goal_state</th>\n",
+       "      <th>action_description</th>\n",
+       "      <th>motor_cmd</th>\n",
+       "      <th>len_action_desc</th>\n",
+       "      <th>len_motor_cmd</th>\n",
+       "      <th>version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2146</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>put the fork to the left of mondamin</td>\n",
+       "      <td>:FORK RED POSE-13 :MONDAMIN BLUE POSE-11 :FORK...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>v1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9975</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>move the breakfast-cereal right</td>\n",
+       "      <td>:BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>v2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3679</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>move the cereal forwards</td>\n",
+       "      <td>:CEREAL BLUE POSE-11 :CEREAL  #'*forward-trans...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>v1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1571</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>put the breakfast-cereal to the left of plate</td>\n",
+       "      <td>:BREAKFAST-CEREAL GREEN POSE-7 :PLATE RED POSE...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>v2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>shift the knife forwards</td>\n",
+       "      <td>:KNIFE GREEN POSE-2 :KNIFE  #'*forward-transfo...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>v2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sample_ID  in_state  goal_state  \\\n",
+       "0       2146         0           9   \n",
+       "1       9975         0          10   \n",
+       "2       3679         0           9   \n",
+       "3       1571         0          10   \n",
+       "4       3711         0           9   \n",
+       "\n",
+       "                              action_description  \\\n",
+       "0           put the fork to the left of mondamin   \n",
+       "1               move the breakfast-cereal right    \n",
+       "2                       move the cereal forwards   \n",
+       "3  put the breakfast-cereal to the left of plate   \n",
+       "4                      shift the knife forwards    \n",
+       "\n",
+       "                                           motor_cmd  len_action_desc  \\\n",
+       "0  :FORK RED POSE-13 :MONDAMIN BLUE POSE-11 :FORK...                8   \n",
+       "1  :BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...                5   \n",
+       "2  :CEREAL BLUE POSE-11 :CEREAL  #'*forward-trans...                4   \n",
+       "3  :BREAKFAST-CEREAL GREEN POSE-7 :PLATE RED POSE...                8   \n",
+       "4  :KNIFE GREEN POSE-2 :KNIFE  #'*forward-transfo...                5   \n",
+       "\n",
+       "   len_motor_cmd version  \n",
+       "0             11      v1  \n",
+       "1              8      v2  \n",
+       "2              8      v1  \n",
+       "3             11      v2  \n",
+       "4              8      v2  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = pd.read_csv(osp.join(FINAL_DATASET_DIR, \"test.csv\"))\n",
+    "print(test.shape)\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d827f914-2823-465d-a5ed-3eb60003cc6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TO_REMOVE = [\n",
+    "    8395\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d4d85ae-4aac-4354-8987-421f3c1a4b0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(249, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = test[~test[\"sample_ID\"].isin(TO_REMOVE)].reset_index(drop=True)\n",
+    "print(test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2d2a0109-c0d0-4a8a-9efb-ae0559a5a2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.to_csv(osp.join(FINAL_DATASET_DIR, \"test.csv\"), index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab1f042-5f41-4ede-acbd-56451c0c83ec",
+   "id": "42b539b8-d4dc-405a-99b4-ac2fd4cf76b4",
    "metadata": {},
    "outputs": [],
    "source": []
