updated inference functions+

--- a/notebooks/TestTrainingScripts.ipynb
+++ b/notebooks/TestTrainingScripts.ipynb
@@ -50,13 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2522cbc2-4214-45af-85b7-f3549e411049",
    "metadata": {},
    "outputs": [],
    "source": [
     "import lightning.pytorch as pl\n",
     "from lightning.pytorch import Trainer, seed_everything\n",
+    "import logging\n",
+    "logging.basicConfig(level=\"INFO\")\n",
     "\n",
     "import os\n",
     "\n",
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "23dcf435-8c97-49b8-87a5-42353b27a8da",
    "metadata": {},
    "outputs": [],
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b29375a1-7c3f-456b-8f77-713494ea42a5",
    "metadata": {},
    "outputs": [],
@@ -114,7 +116,6 @@
    "cell_type": "markdown",
    "id": "d832e26d-6760-4e1a-85e6-97bd9a2a2803",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "1c63a0b1-c292-4e90-ab2c-b35b411e9d3c",
    "metadata": {},
    "outputs": [
@@ -131,8 +132,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Training on 4079 samples.\n",
-      "INFO:root:Validating on 429 samples.\n",
+      "INFO:root:Training on 4054 samples.\n",
+      "INFO:root:Validating on 454 samples.\n",
       "INFO:root:Testing on 249 samples.\n"
      ]
     },
@@ -868,10 +869,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "3aa39e4b-e8ec-43b4-9580-e1a52259bf14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('cpu', 'cuda')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.TEST_DEVICE, config.DEVICE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "5cbfea61-409d-4185-9566-b46378c663c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Jan  6 08:26:26 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.23.08              Driver Version: 545.23.08    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  Tesla V100-SXM2-32GB           On  | 00000000:89:00.0 Off |                    0 |\n",
+      "| N/A   29C    P0              53W / 300W |   1105MiB / 32768MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A     45212      C   ...n/miniconda3/envs/smf_be/bin/python     1102MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "!nvidia-smi"
    ]
@@ -879,118 +928,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa39e4b-e8ec-43b4-9580-e1a52259bf14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config.TEST_DEVICE, config.DEVICE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e395d941-b41e-43b9-83ac-962a0a05b767",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def inference_step(\n",
-    "    test_loader, \n",
-    "    debug:bool=False, \n",
-    "    mode:str=\"inference\",\n",
-    "    device:str=config.TEST_DEVICE\n",
-    "):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "        Execute inference procedure in 2 modes\n",
-    "        \n",
-    "        mode: (str) One of \n",
-    "            inference: generate predictions using trained model\n",
-    "            eval: Evaluate model by comparing predictions to ground truth\n",
-    "            \n",
-    "        test_loader: (DataLoader) Data loader to be used for testing\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    model = model_utils.load_checkpoint()\n",
-    "    \n",
-    "    output = {\n",
-    "        \"self_attn_ws\"          : [], \n",
-    "        \"cross_attn_ws\"         : [],\n",
-    "        \"preds\"         : [],\n",
-    "        \"labels\" : []\n",
-    "    }\n",
-    "    \n",
-    "    test_progress = tqdm(range(len(test_loader)), desc=\"Running inference\")\n",
-    "    \n",
-    "    for batch_num in test_progress:\n",
-    "        batch = next(iter(test_loader))\n",
-    "        \n",
-    "        for sample_id in tqdm(range(config.TEST_BATCH_SIZE), leave=False, desc=\"Generating motor commands\"):\n",
-    "        \n",
-    "            inp = model_utils.fetch_sample_from_batch(\n",
-    "                batch, \n",
-    "                batch_size=batch[\"in_state\"].shape[0],\n",
-    "                random=False,\n",
-    "                idx=sample_id\n",
-    "            )\n",
-    "\n",
-    "            pred_ids, logits, self_attn_ws, cross_attn_ws = model_utils.greedy_decoding(\n",
-    "                model=model, \n",
-    "                batch_inp=inp, \n",
-    "                debug=debug,\n",
-    "                device=device\n",
-    "            )\n",
-    "\n",
-    "\n",
-    "            preds = model.decode_predictions(\n",
-    "                    predicted_ids=pred_ids\n",
-    "            )\n",
-    "\n",
-    "            output[\"self_attn_ws\"].append(self_attn_ws)\n",
-    "            output[\"cross_attn_ws\"].append(cross_attn_ws)\n",
-    "            output[\"preds\"].append(preds[0])\n",
-    "\n",
-    "            if mode == \"eval\":\n",
-    "                labels = inp[\"labels\"].to(config.DEVICE)\n",
-    "                label = model.decode_predictions(\n",
-    "                    predicted_ids=labels\n",
-    "                )\n",
-    "            output[\"labels\"].append(label[0])\n",
-    "        \n",
-    "        # break\n",
-    "        \n",
-    "    if mode == \"eval\":\n",
-    "        test_dist = model_utils.calc_edit_distance(\n",
-    "            predictions=out[\"preds\"], \n",
-    "            y=out[\"labels\"], \n",
-    "            batch=True\n",
-    "        )        \n",
-    "        \n",
-    "        inference_results = pd.DataFrame({\n",
-    "            \"prediction\": output[\"preds\"],\n",
-    "            \"label\": output[\"labels\"],\n",
-    "            \"correct\": [float(p==l) for p,l in zip(output[\"preds\"], output[\"labels\"])],\n",
-    "            \"distance\": [model_utils.calc_edit_distance(p, l, batch=False) for p,l in zip(output[\"preds\"], output[\"labels\"])]\n",
-    "        })\n",
-    "        \n",
-    "        success_rate = 100*inference_results.correct.mean()\n",
-    "        \n",
-    "        print(f\"**** Evaluatiion Report *****\")\n",
-    "        print(f\"> Test Lev. distance\\t: {test_dist}\")\n",
-    "        print(f\"> Success Rate\\t\\t: {success_rate}%\")\n",
-    "        print(f\"**** Evaluatiion Report *****\")\n",
-    "        return inference_results\n",
-    "    else:\n",
-    "        return output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a7e8b39a-e63a-4fec-9330-dac5099fb315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Loading model from checkpoint...\n",
+      "INFO:root:Creating instance of RTCRAM...\n"
+     ]
+    }
+   ],
    "source": [
-    "out = inference_step(\n",
+    "out = model_utils.inference_step(\n",
     "    test_loader=dm.test_dataloader(), \n",
     "    mode=\"eval\", \n",
     "    device=config.DEVICE\n",
