updated inference functions++

--- a/notebooks/TrainTestModel.ipynb
+++ b/notebooks/TrainTestModel.ipynb
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a7e8b39a-e63a-4fec-9330-dac5099fb315",
    "metadata": {},
    "outputs": [
@@ -936,8 +936,104 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading model from checkpoint...\n",
-      "INFO:root:Creating instance of RTCRAM...\n"
+      "INFO:root:Creating instance of RTCRAM...\n",
+      "INFO:timm.models._builder:Loading pretrained weights from Hugging Face hub (timm/efficientnet_b3.ra2_in1k)\n",
+      "INFO:timm.models._hub:[timm/efficientnet_b3.ra2_in1k] Safe alternative available for 'pytorch_model.bin' (as 'model.safetensors'). Loading weights using safetensors.\n",
+      "INFO:root:Preparing checkpoint...\n",
+      "INFO:root:loading model state dict...\n",
+      "INFO:root:Loading model from checkpoint...Complete!\n",
+      "INFO:root:Running inference now...\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f045d302ab14ccdbcbf412171edf2ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Running inference:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating motor commands:   0%|          | 0/64 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating motor commands:   0%|          | 0/64 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating motor commands:   0%|          | 0/64 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating motor commands:   0%|          | 0/64 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**** Evaluatiion Report *****\n",
+      "> Test Lev. distance\t: 9.1016\n",
+      "> Success Rate\t\t: 35.9375%\n",
+      "**** Evaluatiion Report *****\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['prediction', 'label', 'correct', 'distance'], dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -951,10 +1047,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0794a82d-e3a2-4306-ad68-b9f0bd00e729",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>label</th>\n",
+       "      <th>correct</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>:FORK RED POSE-13 :FORK BLUE POSE-11 :FORK #'*...</td>\n",
+       "      <td>:FORK RED POSE-13 :MONDAMIN BLUE POSE-11 :FORK...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>:BREAKFAST-CEREAL BLUE :BREAKFAST-CEREAL RED P...</td>\n",
+       "      <td>:BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>:CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...</td>\n",
+       "      <td>:CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>:BREAKFAST-CEREAL RED POSE-7 :PLATE GREEN POSE...</td>\n",
+       "      <td>:BREAKFAST-CEREAL GREEN POSE-7 :PLATE RED POSE...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>:KNIFE GREEN POSE-12 :KNIFE #'*forward-transfo...</td>\n",
+       "      <td>:KNIFE GREEN POSE-2 :KNIFE #'*forward-transfor...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>:SPOON BLUE POSE-9 :GLOVE RED POSE-1 :SPOON #'...</td>\n",
+       "      <td>:SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>:CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...</td>\n",
+       "      <td>:CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>RED POSE-6 :CUP RED POSE-1 :CUP #'*forward-tra...</td>\n",
+       "      <td>:CUP RED POSE-6 :RED-METAL-PLATE RED POSE-1 :C...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>:CEREAL RED POSE-11 :CEREAL #'*leftward-transf...</td>\n",
+       "      <td>:CEREAL RED POSE-11 :CEREAL #'*leftward-transf...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>:CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...</td>\n",
+       "      <td>:CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>256 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            prediction  \\\n",
+       "0    :FORK RED POSE-13 :FORK BLUE POSE-11 :FORK #'*...   \n",
+       "1    :BREAKFAST-CEREAL BLUE :BREAKFAST-CEREAL RED P...   \n",
+       "2    :CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...   \n",
+       "3    :BREAKFAST-CEREAL RED POSE-7 :PLATE GREEN POSE...   \n",
+       "4    :KNIFE GREEN POSE-12 :KNIFE #'*forward-transfo...   \n",
+       "..                                                 ...   \n",
+       "251  :SPOON BLUE POSE-9 :GLOVE RED POSE-1 :SPOON #'...   \n",
+       "252  :CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...   \n",
+       "253  RED POSE-6 :CUP RED POSE-1 :CUP #'*forward-tra...   \n",
+       "254  :CEREAL RED POSE-11 :CEREAL #'*leftward-transf...   \n",
+       "255  :CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...   \n",
+       "\n",
+       "                                                 label  correct  distance  \n",
+       "0    :FORK RED POSE-13 :MONDAMIN BLUE POSE-11 :FORK...      0.0        14  \n",
+       "1    :BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...      0.0        22  \n",
+       "2    :CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...      1.0         0  \n",
+       "3    :BREAKFAST-CEREAL GREEN POSE-7 :PLATE RED POSE...      0.0         6  \n",
+       "4    :KNIFE GREEN POSE-2 :KNIFE #'*forward-transfor...      0.0         1  \n",
+       "..                                                 ...      ...       ...  \n",
+       "251  :SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...      0.0        17  \n",
+       "252  :CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...      1.0         0  \n",
+       "253  :CUP RED POSE-6 :RED-METAL-PLATE RED POSE-1 :C...      0.0        33  \n",
+       "254  :CEREAL RED POSE-11 :CEREAL #'*leftward-transf...      1.0         0  \n",
+       "255  :CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...      1.0         0  \n",
+       "\n",
+       "[256 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out"
    ]
