--- a/notebooks/TrainTestModel.ipynb
+++ b/notebooks/TrainTestModel.ipynb
@@ -151,93 +151,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fdf89d3c-5b52-4845-b69c-29a6d068141e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%time\n",
-    "# batch = next(iter(dm.train_dataloader()))\n",
-    "# print(batch.keys())\n",
-    "# batch[\"in_state\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "37436130-a81a-4414-bdc8-2603174b2cfc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inp = model_utils.fetch_sample_from_batch(\n",
-    "#     batch, \n",
-    "#     batch_size=batch[\"in_state\"].shape[0],\n",
-    "#     random=True\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f9c444b4-41da-490c-80f2-ec982ea305a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inp.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5f7a0460-6dd2-4dd0-be4a-6ba8cb5e1c6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inp[\"ids\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "26f0b63a-0aa5-45f9-b8f3-909f458fd6e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inp[\"decoder_inp_ids\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1ec50209-9052-4b91-962b-122599237d0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_utils.decode_predictions(inp[\"decoder_inp_ids\"][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "22f84b0f-dd3e-43ee-8ba0-19db15abd30a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inp[\"labels\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e9175e88-751c-4d8f-a7fc-fdf8036bbb35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_utils.decode_predictions(inp[\"labels\"][0])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "42036b65-24c1-4ed4-b503-79434d8a2a08",
    "metadata": {
@@ -927,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "a7e8b39a-e63a-4fec-9330-dac5099fb315",
    "metadata": {},
    "outputs": [
@@ -948,7 +861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f045d302ab14ccdbcbf412171edf2ad",
+       "model_id": "1b08a9fd9e804e83905d2522c155e416",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1020,8 +933,8 @@
      "output_type": "stream",
      "text": [
       "**** Evaluatiion Report *****\n",
-      "> Test Lev. distance\t: 9.1016\n",
-      "> Success Rate\t\t: 35.9375%\n",
+      "> Test Lev. distance\t: 8.4180\n",
+      "> Success Rate\t\t: 43.7500%\n",
       "**** Evaluatiion Report *****\n"
      ]
     },
@@ -1031,7 +944,7 @@
        "Index(['prediction', 'label', 'correct', 'distance'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "0794a82d-e3a2-4306-ad68-b9f0bd00e729",
    "metadata": {},
    "outputs": [
@@ -1088,10 +1001,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>:BREAKFAST-CEREAL BLUE :BREAKFAST-CEREAL RED P...</td>\n",
        "      <td>:BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>:BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1109,10 +1022,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>:KNIFE GREEN POSE-12 :KNIFE #'*forward-transfo...</td>\n",
+       "      <td>:KNIFE BLUE POSE-10 :KNIFE GREEN POSE-3 :KNIFE...</td>\n",
        "      <td>:KNIFE GREEN POSE-2 :KNIFE #'*forward-transfor...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1123,17 +1036,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>251</th>\n",
-       "      <td>:SPOON BLUE POSE-9 :GLOVE RED POSE-1 :SPOON #'...</td>\n",
        "      <td>:SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17</td>\n",
+       "      <td>:SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>252</th>\n",
+       "      <td>:CUP RED POSE-6 :BOTTLE BLUE POSE-2 :CUP #'*ri...</td>\n",
        "      <td>:CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...</td>\n",
-       "      <td>:CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
@@ -1164,26 +1077,26 @@
       "text/plain": [
        "                                            prediction  \\\n",
        "0    :FORK RED POSE-13 :FORK BLUE POSE-11 :FORK #'*...   \n",
-       "1    :BREAKFAST-CEREAL BLUE :BREAKFAST-CEREAL RED P...   \n",
+       "1    :BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...   \n",
        "2    :CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...   \n",
        "3    :BREAKFAST-CEREAL RED POSE-7 :PLATE GREEN POSE...   \n",
-       "4    :KNIFE GREEN POSE-12 :KNIFE #'*forward-transfo...   \n",
+       "4    :KNIFE BLUE POSE-10 :KNIFE GREEN POSE-3 :KNIFE...   \n",
        "..                                                 ...   \n",
-       "251  :SPOON BLUE POSE-9 :GLOVE RED POSE-1 :SPOON #'...   \n",
-       "252  :CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...   \n",
+       "251  :SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...   \n",
+       "252  :CUP RED POSE-6 :BOTTLE BLUE POSE-2 :CUP #'*ri...   \n",
        "253  RED POSE-6 :CUP RED POSE-1 :CUP #'*forward-tra...   \n",
        "254  :CEREAL RED POSE-11 :CEREAL #'*leftward-transf...   \n",
        "255  :CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...   \n",
        "\n",
        "                                                 label  correct  distance  \n",
        "0    :FORK RED POSE-13 :MONDAMIN BLUE POSE-11 :FORK...      0.0        14  \n",
-       "1    :BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...      0.0        22  \n",
+       "1    :BREAKFAST-CEREAL BLUE POSE-3 :BREAKFAST-CEREA...      1.0         0  \n",
        "2    :CEREAL BLUE POSE-11 :CEREAL #'*forward-transf...      1.0         0  \n",
        "3    :BREAKFAST-CEREAL GREEN POSE-7 :PLATE RED POSE...      0.0         6  \n",
-       "4    :KNIFE GREEN POSE-2 :KNIFE #'*forward-transfor...      0.0         1  \n",
+       "4    :KNIFE GREEN POSE-2 :KNIFE #'*forward-transfor...      0.0        21  \n",
        "..                                                 ...      ...       ...  \n",
-       "251  :SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...      0.0        17  \n",
-       "252  :CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...      1.0         0  \n",
+       "251  :SPOON RED POSE-9 :CAP BLUE POSE-1 :SPOON #'*f...      1.0         0  \n",
+       "252  :CUP RED POSE-6 :CAP BLUE POSE-2 :CUP #'*right...      0.0         7  \n",
        "253  :CUP RED POSE-6 :RED-METAL-PLATE RED POSE-1 :C...      0.0        33  \n",
        "254  :CEREAL RED POSE-11 :CEREAL #'*leftward-transf...      1.0         0  \n",
        "255  :CEREAL RED POSE-14 :BLUE-METAL-PLATE RED POSE...      1.0         0  \n",
@@ -1191,7 +1104,7 @@
        "[256 rows x 4 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,6 +1117,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34cf4f7b-a680-4644-8cf4-bfcf28d614c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2539711a-9241-408d-b0e0-f088baa836cc",
    "metadata": {},
    "outputs": [],
    "source": []
